NetBSD Problem Report #46946

From www@NetBSD.org  Wed Sep 12 12:04:10 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id EB1CA63B95F
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 12 Sep 2012 12:04:09 +0000 (UTC)
Message-Id: <20120912120409.25B4C63B86D@www.NetBSD.org>
Date: Wed, 12 Sep 2012 12:04:09 +0000 (UTC)
From: sdaoden@gmail.com
Reply-To: sdaoden@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Hostname set during installation is FQDN (nbsd6.), newaliases(1) doesn't like that
X-Send-Pr-Version: www-1.0

>Number:         46946
>Category:       install
>Synopsis:       Hostname set during installation is FQDN (nbsd6.), newaliases(1) doesn't like that
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Sep 12 12:05:04 +0000 2012
>Closed-Date:    Mon Oct 01 17:54:13 +0000 2012
>Last-Modified:  Mon Oct 01 17:54:13 +0000 2012
>Originator:     Steffen Nurpmeso
>Release:        NetBSD-6.0_RC1-i386
>Organization:
>Environment:
NetBSD nbsd6 6.0_RC1 NetBSD 6.0_RC1 (GENERIC) i386
>Description:
I've set up a machine without any real internet, only setting the hostname during installation (to "nbsd6"), that was warped automatically to a FQDN ("nbsd6.").
I.e., in rc.conf(5) i had "nbsd6.", but in hosts(5) i have "nbsd6" ("Added by NetBSD sysinst").
newaliases(1) doesn't seem to be able to handle the former:
>How-To-Repeat:
Set a FQDN hostname(1), run newaliases.
>Fix:

>Release-Note:

>Audit-Trail:
From: "Julian Fagir" <jdf@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46946 CVS commit: src/distrib/utils/sysinst
Date: Sun, 23 Sep 2012 17:37:52 +0000

 Module Name:	src
 Committed By:	jdf
 Date:		Sun Sep 23 17:37:51 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst: net.c

 Log Message:
 Prevent sysinst from setting an fqdn in rc.conf when the user entered no domain
 (i.e., sets only the hostname).  Fix for PR install/46946.


 To generate a diff of this commit:
 cvs rdiff -u -r1.132 -r1.133 src/distrib/utils/sysinst/net.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: jdf@NetBSD.org
State-Changed-When: Sun, 23 Sep 2012 17:46:52 +0000
State-Changed-Why:
Fix committed, pullup for -6 requested.


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46946 CVS commit: [netbsd-6] src/distrib/utils/sysinst
Date: Mon, 1 Oct 2012 17:43:01 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Mon Oct  1 17:43:01 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-6]: net.c

 Log Message:
 Pull up following revision(s) (requested by jdf in ticket #570):
 	distrib/utils/sysinst/net.c: revision 1.133
 Prevent sysinst from setting an fqdn in rc.conf when the user entered no
 domain (i.e., sets only the hostname).  Fix for PR install/46946.


 To generate a diff of this commit:
 cvs rdiff -u -r1.130.2.1 -r1.130.2.2 src/distrib/utils/sysinst/net.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 01 Oct 2012 17:54:13 +0000
State-Changed-Why:
pulled up, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.