Prevent sysinst from setting an fqdn in rc.conf when the user entered no domain (i.e., sets only the hostname).  Fix for PR install/46946.